2009-11-06  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	More fixes to the compositing logic.

	* src/mb/hd-comp-mgr.c: Add mb_wm_client_is_map_confirmed call to all
	compositing inspection code.
	(hd_comp_mgr_client_needs_compositing): Renamed
	to hd_comp_mgr_client_prefers_compositing and now includes call to
	hd_comp_mgr_client_looks_better_composited.
	* src/mb/hd-wm.c (hd_wm_activate_zoomed_client): Add call to
	mb_wm_client_is_map_confirmed, since unmapped clients don't count.

2009-11-05  Laszlo Pere  <lpere@blumsoft.eu>

	* src/mb/hd-comp-mgr.c: Handling a special case for the stackable
	  window. Part of the fix for NB#134010.

2009-11-05  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#145418 - Backlight stays on indefinitely after using Screen
	calibration

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_restack): Check the DND flag also
	when bailing out in the beginning of the function.
	(hd_comp_mgr_check_do_not_disturb_flag): Optimise a bit.

	Release 2.2.114-1

2009-11-04  Gordon Williams <gordon.williams@collabora.co.uk>

	Regression fix: Task launcher subview should return to the top every
	                time it is viewed.

	* src/launcher/hd-launcher-grid.c: Set H and V adjustments to 0 at the
	  start of a transition that first shows a launcher page.

2009-11-05  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#142324 - UI freezes with HildonAppMenu opened and Close
	non-responsive dialog appearing

	* src/mb/hd-wm.c (hd_wm_client_hang): Store XID of the hung dialog.
	* src/mb/hd-note.c (hd_note_stacking_layer): If the hung dialog is
	being stacked and there is an application menu, stack it above the
	menu.
	* src/mb/hd-wm.[ch] (hd_wm_get_hung_client_dialog_xid): New accessor
	for XID of the hung dialog.

2009-11-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Make the launcher tree population visually quicker.

	* src/launcher/hd-launcher.c (hd_launcher_lazy_traverse_tree):