@@ -3,6 +3,7 @@ hildon-desktop (1:2.2.115-1~unreleased) unstable; urgency=low
   Kimmo:
   * Fixes: NB#145418 - Backlight stays on indefinitely after using Screen
     calibration
+  * Further non-compositing fixes.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu,  5 Nov 2009 15:25:57 +0200
 
